--- a/logback/pom.xml
+++ b/logback/pom.xml
@@ -6,7 +6,7 @@
         <groupId>com.nooices</groupId>
         <artifactId>demo</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
     <artifactId>logback</artifactId>
     <version>0.0.1-SNAPSHOT</version>
