--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,12 @@
     <description>Different Kinds of Demo</description>
 
     <modules>
+        <module>algorithm</module>
         <module>apachecommonscli</module>
         <module>logback</module>
+        <module>netty</module>
+        <module>spring</module>
+        <module>others</module>
     </modules>
 
     <properties>
@@ -39,11 +43,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
         <dependency>
-            <groupId>com.nooices</groupId>
-            <artifactId>apachecommonscli</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.4.4</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
         <dependency>
